--- a/index.html
+++ b/index.html
@@ -198,11 +198,7 @@
                     <h6>10% off when you get an online quote - Convenient payment options!</h6>
                 </div>
                 <div class="col-lg-6" align="right">
-                    <img src="assets/card-image/Mastercard_icon-icons.com_60554.png" height="70px"/>
-                    <img src="assets/card-image/americanexpress_82060.png" height="50px"/>
-                    <img src="assets/card-image/Visa_icon-icons.com_60549.png" height="70px"/>
-                    <img src="assets/card-image/1495815234-jd03_84587.png" height="70px"/>
-                    <img src="assets/card-image/Paypal-39_icon-icons.com_60555.png" height="70px"/>
+                    <img src="assets/card-image/Untitled-3.png" class="img-fluid"/>
                 </div>
             </div>
             <form action="#" method="get">
