--- a/faq.html
+++ b/faq.html
@@ -417,51 +417,34 @@
 <footer>
     <div class="footer-top">
         <div class="container">
+            <p style="font-size: 20px;" class="white-text">Service is contracted between website users and designated
+                service providers
+                (including Long Island Access Limo and Car Service LLC - serving NY, CT, NJ - headquartered in Coram
+                NY).</p>
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <h6>Top Categores</h6>
                     <ul>
-                        <li><a href="#">Crossovers</a></li>
-                        <li><a href="#">Hybrids</a></li>
-                        <li><a href="#">Hybrid Cars</a></li>
-                        <li><a href="#">Hybrid SUVs</a></li>
-                        <li><a href="#">Concept Vehicles</a></li>
+                        <li><a href="#">Quotes/Reservations</a></li>
+                        <li><a href="#">Fleet</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <h6>About Us</h6>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Services</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Sitemap</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-6">
                     <ul>
                         <li><a href="#">Privacy</a></li>
-                        <li><a href="#">Hybrid Cars</a></li>
-                        <li><a href="#">Cookies</a></li>
-                        <li><a href="#">Trademarks</a></li>
-                        <li><a href="#">Terms of use</a></li>
+                        <li><a href="#">Login</a></li>
                     </ul>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <h6>Useful Links</h6>
-                    <ul>
-                        <li><a href="#">Our Partners</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Sitemap</a></li>
-                        <li><a href="#">Investors</a></li>
-                        <li><a href="#">Request a Quote</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <h6>Subscribe Newsletter</h6>
-                    <div class="newsletter-form">
-                        <form action="#">
-                            <div class="form-group">
-                                <input type="email" class="form-control newsletter-input" required
-                                       placeholder="Enter Email Address"/>
-                            </div>
-                            <button type="submit" class="btn btn-block">Subscribe <span class="angle_arrow"><i
-                                    class="fa fa-angle-right" aria-hidden="true"></i></span></button>
-                        </form>
-                        <p class="subscribed-text">*We send great deals and latest auto news to our subscribed users
-                            very week.</p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -471,24 +454,14 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <p class="copy-right">Copyright &copy; 2021 CarForYou. All Rights Reserved</p>
+                    <p class="copy-right">Copyright &copy; 2018 limozip.com</p>
                 </div>
-                <div class="col-md-6 text-right">
+                <div class="col-md-6" align="right">
                     <div class="footer_widget">
-                        <p>Download Our APP:</p>
-                        <ul>
-                            <li><a href="#"><i class="fa fa-android" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-apple" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="footer_widget">
-                        <p>Connect with Us:</p>
-                        <ul>
-                            <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
+                        <img src="assets/card-image/388-3884635_paypal-logo-e-commerce-payment-system-paypal-verified-removebg-preview.png"
+                             width="100px">
+                        <img src="assets/card-image/integration_logo_authorizenet_verifiedmerchant.gif"
+                             width="100px">
                     </div>
                 </div>
             </div>
