--- a/fleet.html
+++ b/fleet.html
@@ -127,15 +127,15 @@
 <!-- /Header -->
 
 <!--Page Header-->
-<section class="page-header contactus_page">
+<section class="page-header faq_page">
     <div class="container">
         <div class="page-header_wrap">
             <div class="page-heading">
-                <h1>Contact Us</h1>
+                <h1>Fleet</h1>
             </div>
             <ul class="coustom-breadcrumb">
                 <li><a href="#">Home</a></li>
-                <li>Contact Us</li>
+                <li>Fleet</li>
             </ul>
         </div>
     </div>
@@ -143,66 +143,78 @@
     <div class="dark-overlay"></div>
 </section>
 <!-- /Page Header-->
-
-<!--Contact-us-->
-<section class="contact_us section-padding">
+<section class="section-padding">
     <div class="container">
+        <div class="section-header text-center">
+            <h2>Fleet</h2>
+        </div>
         <div class="row">
-            <div class="col-md-6">
-                <h3>Get in touch using the form below</h3>
-                <div class="contact_form gray-bg">
-                    <form action="#" method="get">
-                        <div class="form-group">
-                            <label class="control-label">Full Name <span>*</span></label>
-                            <input type="text" class="form-control white_bg" id="fullname">
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
                         </div>
-                        <div class="form-group">
-                            <label class="control-label">Email Address <span>*</span></label>
-                            <input type="email" class="form-control white_bg" id="emailaddress">
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label">Phone Number <span>*</span></label>
-                            <input type="text" class="form-control white_bg" id="phonenumber">
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label">Message <span>*</span></label>
-                            <textarea class="form-control custom-height white_bg" rows="4"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button class="btn" type="submit">Send Message <span class="angle_arrow"><i
-                                    class="fa fa-angle-right" aria-hidden="true"></i></span></button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <h3>Contact Info</h3>
-                <div class="contact_detail">
-                    <ul>
-                        <li>
-                            <div class="icon_wrap"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-                            <div class="contact_info_m">PO Box 1025MNO Collins Street West Victoria 8007 Australia</div>
-                        </li>
-                        <li>
-                            <div class="icon_wrap"><i class="fa fa-phone" aria-hidden="true"></i></div>
-                            <div class="contact_info_m"><a href="tel:61-1234-567-90">+61-123-456-789</a></div>
-                        </li>
-                        <li>
-                            <div class="icon_wrap"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
-                            <div class="contact_info_m"><a
-                                    href="mailto:contact@exampleurl.com">contact@exampleurl.com</a></div>
-                        </li>
-                    </ul>
-                    <div class="map_wrap">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26361315.424069386!2d-113.75658747371207!3d36.241096924675375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited+States!5e0!3m2!1sen!2sin!4v1483614660041"
-                                width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <a href="#"><img src="assets/images/blog_img1.jpg" class="img-fluid" alt="image"></a>
                     </div>
-                </div>
+                    <div class="blog-content">
+                        <h5><a href="#">Luxury Sedan:3 passengers</a></h5>
+                        <p>Classic black Sedans are reliable, dependable and comfortable.
+                            These late-model Town Cars…</p>
+                        <a href="#" class="btn-link">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                    </div>
+                </article>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <a href="#"><img src="assets/images/blog_img2.jpg" class="img-fluid" alt="image"></a>
+                    </div>
+                    <div class="blog-content">
+                        <h5><a href="#">Midsize SUV:4 passengers</a></h5>
+                        <p>For groups of 4 or groups with a bit of extra luggage,
+                            our affordable and efficient yet spacious midsize SUV…</p>
+                        <a href="#" class="btn-link">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                    </div>
+                </article>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <a href="#"><img src="assets/images/blog_img3.jpg" class="img-fluid" alt="image"></a>
+                    </div>
+                    <div class="blog-content">
+                        <h5><a href="#">Luxury Suv:6 passengers</a></h5>
+                        <p>Great for winter weather conditions, passengers that want extra space,
+                            or tremendous luggage capacity…</p>
+                        <a href="#" class="btn-link">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                    </div>
+                </article>
             </div>
         </div>
     </div>
 </section>
-<!-- /Contact-us-->
 
 <!--Footer -->
 <footer>
