--- a/contact-us.html
+++ b/contact-us.html
@@ -95,22 +95,22 @@
                         <li>
                             <a href="index.html">Home</a>
                         </li>
-                        <li><a href="about-us.html">Quotes/ Reservations</a></li>
-                        <li><a href="about-us.html">FAQ</a></li>
+                        <li><a href="quote-reservation.html">Quotes/ Reservations</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li class="dropdown"><a href="#" data-bs-toggle="dropdown" aria-expanded="false">Fleet</a>
                             <ul class="dropdown-menu">
-                                <li><a href="listing-grid.html">Sedans</a></li>
-                                <li><a href="listing-classic.html">SUVs</a></li>
+                                <li><a href="fleet.html">Sedans</a></li>
+                                <li><a href="fleet.html">SUVs</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">Services</a>
+                            <a href="services.html">Services</a>
                         </li>
                         <li>
-                            <a href="#">Contact us</a>
+                            <a href="contact-us.html">Contact us</a>
                         </li>
                         <li>
-                            <a href="#loginform">Login</a>
+                            <a href="#loginform" data-bs-toggle="modal" data-bs-dismiss="modal">Login</a>
                         </li>
                     </ul>
                 </div>
@@ -215,19 +215,19 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <ul>
-                        <li><a href="#">Quotes/Reservations</a></li>
-                        <li><a href="#">Fleet</a></li>
+                        <li><a href="quote-reservation.html">Quotes/Reservations</a></li>
+                        <li><a href="fleet.html">Fleet</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Services</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="services.html">Services</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <ul>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
                         <li><a href="#">Sitemap</a></li>
                     </ul>
                 </div>
@@ -278,7 +278,7 @@
 
                 <div class="login_wrap">
                     <div class="row">
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-12 col-sm-12">
                             <form action="#" method="get">
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Username or Email address*">
@@ -295,22 +295,8 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-md-6 col-sm-6">
-                            <h6 class="gray_text">Login the Quick Way</h6>
-                            <a href="#" class="btn btn-block facebook-btn"><i class="fa fa-facebook-square"
-                                                                              aria-hidden="true"></i> Login with
-                                Facebook</a> <a href="#" class="btn btn-block twitter-btn"><i
-                                class="fa fa-twitter-square" aria-hidden="true"></i> Login with Twitter</a> <a href="#"
-                                                                                                               class="btn btn-block googleplus-btn"><i
-                                class="fa fa-google-plus-square" aria-hidden="true"></i> Login with Google+</a></div>
-                        <div class="mid_divider"></div>
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer text-center">
-                <p>Don't have an account? <a href="#signupform" data-bs-toggle="modal" data-bs-dismiss="modal">Signup
-                    Here</a></p></br>
-                <p><a href="#forgotpassword" data-bs-toggle="modal" data-bs-dismiss="modal">Forgot Password ?</a></p>
             </div>
         </div>
     </div>
