all page design change

--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                     </div>
                     <div class="form-group col-md-3 col-sm-6">
                         <label></label>
-                        <button type="submit" class="btn btn-block">Continue <i class="fa fa-arrow-right"
-                                                                                aria-hidden="true"></i></button>
+                        <a href="reservations.html" class="btn btn-block">Continue <i class="fa fa-arrow-right"
+                                                                                aria-hidden="true"></i></a>
                     </div>
                 </div>
             </form>
