index page changed

--- a/index.html
+++ b/index.html
@@ -136,37 +136,37 @@
         <div class="carousel-inner">
             <!--item-1-->
             <div class="carousel-item active">
-                <img src="assets/images/banner/2.png" class="img-fluid" alt="image">
+                <img src="assets/images/slider/slider_1.jpg" class="img-fluid" alt="image">
                 <div class="carousel-caption">
                     <div class="banner_text text-center div_zindex white-text">
-                        <h1>Long Island Car Service, more</h1>
-                        <h3>Affordable Long Island Limo Service or Long Island Car Service</h3>
-                        <a href="#" class="btn">More Info</a>
+                        <h1>Airport access limo</h1>
+                        <h3>Our car service & airport Transportation provides Transportation to JFK, LGA, Newark, islip Airport. Piers, NY city</h3>
+                        <!--<a href="#" class="btn">More Info</a>-->
                     </div>
                 </div>
             </div>
 
             <!--item-2-->
             <div class="carousel-item">
-                <img src="assets/images/banner/1.png" alt="image" class="img-fluid">
+                <img src="assets/images/slider/slider_2.jpg" alt="image" class="img-fluid">
                 <div class="carousel-caption">
                     <div class="banner_text text-center div_zindex white-text">
                         <h1>Car service to JFK, LGA, Airports</h1>
                         <h3>Rides to NY, CT, NJ destinations. Providing reliable Tri-state Transportation services.</h3>
-                        <a href="#" class="btn">More Info</a>
+                        <!--<a href="#" class="btn">More Info</a>-->
                     </div>
                 </div>
             </div>
 
             <!--item-3-->
             <div class="carousel-item">
-                <img src="assets/images/banner/3.png" alt="image" class="img-fluid">
+                <img src="assets/images/slider/slider_3.jpg" alt="image" class="img-fluid">
                 <div class="carousel-caption">
                     <div class="banner_text text-center div_zindex white-text">
                         <h1>Event, Corporate & Airport Transportation</h1>
                         <h3>Manhattan, 5 Boroughs, Long Island, Nassau, Suffolk, Rockland, Westchester, NJ, CT, other
                             areas</h3>
-                        <a href="#" class="btn">More Info</a>
+                        <!--<a href="#" class="btn">More Info</a>-->
                     </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h3>Request a quote/ make a reservation</h3>
-                    <h6>10% off when you get an online quote - Convenient payment options!</h6>
+                    <h6>Convenient payment options!</h6>
                 </div>
                 <div class="col-lg-6" align="right">
                     <img src="assets/card-image/Untitled-3.png" class="img-fluid"/>
@@ -327,7 +327,7 @@
 <section class="about-us-section section-padding gray-bg">
     <div class="container">
         <div class="section-header text-center">
-            <h2>About <span>Long Island Access Limo</span></h2>
+            <h2>About <span>Airport Access limo And Car service </span></h2>
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-6">
@@ -335,8 +335,8 @@
                     <div class="looking-cat-image mt-5"><img src="assets/images/car/1.png" alt="Image"></div>
                     <div class="looking-car-content">
                         <h3>Limos,Black Cars, SUVs</h3>
-                        <p>Many people use our service for hourly private sightseeing tours, night out on the town,
-                            tour around Times Square, Central Park, Ground Zero, shopping</p>
+                        <p>airport Access limo is the most trusted Long Island airport car service company. We strive to meet each customer’s need independently,
+                            With prompt and courteous service.</p>
                         <a href="#" class="btn">More Info<i class="fa fa-chevron-circle-right"
                                                             aria-hidden="true"></i></a></div>
                 </div>
@@ -346,8 +346,8 @@
                     <div class="looking-cat-image mt-5"><img src="assets/images/car/2.png" alt="Image"></div>
                     <div class="looking-car-content">
                         <h3>Tristate Coverage</h3>
-                        <p>We provide transportation Anywhere in Greater New York - Manhattan, 5 Boroughs,
-                            Long Island, Nassau, Suffolk, Northwest Metro Area, Rockland, Westchester, NJ, CT</p>
+                        <p>Whether you’re booking airport transportation. a night out on the town ,
+                            From the moment you book your reservation, you can rest assured you won’t have to worry about getting to your destination.</p>
                         <a href="#" class="btn">More Info<i class="fa fa-chevron-circle-right"
                                                             aria-hidden="true"></i></a></div>
                 </div>
@@ -362,7 +362,7 @@
     <div class="container">
         <div class="div_zindex white-text text-center">
             <h3>Tags: Long Island Limo Service / Long Island Car Service / Rides from Long<br> Island to
-                JFK airport / Rides to Laguardia from Long Island / LI Access Limo...</h3>
+                JFK airport / Rides to Laguardia from Long Island / Airport limo , car service to airport , airport transportation Limo service Suffolk county,</h3>
         </div>
     </div>
 
