service page changed

--- a/services.html
+++ b/services.html
@@ -142,7 +142,7 @@
 <section class="section-padding">
   <div class="container">
     <div class="section-header">
-      <h2>LI Limos, Car Service, Airport Service, more</h2>
+      <h2>Airport Access Limo& car services in Long Island Providing Luxury Sedan & SUVs</h2>
       <p class="mt-4">We enjoy giving our transportation service customers such great
         treatment that they repeatedly use us again and again every time
         they need airport transportation, limo transportation, or group
@@ -164,11 +164,9 @@
             <a href="#"><img src="assets/images/service/1.jpg" class="img-fluid" alt="image"></a>
           </div>
           <div class="blog-content">
-            <h5><a href="#">Airport transport</a></h5>
-            <p>Tri-State airports to or from Long Island –
-              use our dependable and affordable airport limos.
-              Call Or save 10% online with a quote!...</p>
-            <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
+            <h5><a href="#">Airport Transportation</a></h5>
+            <p>On time Every time . worry Free , hassle free , airport Assess limo and car service in Long Island available for pick up and drop off at all major New York, New Jersey airport
+              Including JFK. LGA . Newark. TEB .</p>
         </article>
       </div>
       <div class="col-md-4 col-sm-4">
@@ -182,14 +180,12 @@
                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
               </ul>
             </div>
-            <a href="#"><img src="assets/images/service/2.jpg" class="img-fluid" alt="image"></a>
+            <a href="#"><img src="assets/images/service/9.jpg" class="img-fluid" alt="image"></a>
           </div>
           <div class="blog-content">
-            <h5><a href="#">Limos to Local Vineyards</a></h5>
-            <p>Enjoy one of Long Island’s many vineyards, with one of our
-              chaffeurs transporting your small or large group.
-              More info Call Or save 10% online with a quote!...</p>
-            <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
+            <h5><a href="#">Corporate Travel</a></h5>
+            <p>When it come to professional corporate travel, Airport Access limo& car service offer the best Solution, reliability. And value, whether you need an executive black car service , an expensive SUV or corporate van
+              Our corporate fleet consists of all black, late -model sedans , SUV , check out our competitive rates and book online instantly</p>
         </article>
       </div>
       <div class="col-md-4 col-sm-4">
@@ -203,15 +199,11 @@
                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
               </ul>
             </div>
-            <a href="#"><img src="assets/images/service/3.jpg" class="img-fluid" alt="image"></a>
+            <a href="#"><img src="assets/images/service/8.jpg" class="img-fluid" alt="image"></a>
           </div>
           <div class="blog-content">
-            <h5><a href="#">Long Island Business Limos</a></h5>
-            <p>Whether you’re meeting with a client or
-              colleagues or doing any other crucial business
-              task, dependable professional transportation
-              can help. Call Or save 10% online with a quote!...</p>
-            <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
+            <h5><a href="#">Entertainment and Tour</a></h5>
+            <p>Whether you are touring in the NY city , hitting a ball game , visiting the Museums , or wineries . We will surpass your expectations with proven reliability and unparalleled attention</p>
         </article>
       </div>
     </div>
@@ -227,17 +219,14 @@
                     <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                   </ul>
                 </div>
-                <a href="#"><img src="assets/images/service/4.jpg" class="img-fluid" alt="image"></a>
+                <a href="#"><img src="assets/images/service/7.jpg" class="img-fluid" alt="image"></a>
               </div>
               <div class="blog-content">
-                <h5><a href="#">Stretch Limos, Strech SUVs, Party Buses and more for all Occasions</a></h5>
-                <p>Using our chauffeured limousine services lets you focus on
-                  your event or occasion, and provides you with
-                  comfort and style...</p>
-                <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
+                <h5><a href="#">Cruise Terminal</a></h5>
+                <p>Ready to hit the high seas? Our fleet service New York pier 88 , Bayonne , Brooklyn. Our sedan, SUV , Vans are perfect to get you and your family to the ship on time. Want to ride in style? Try one of our sedans or SUVs,</p>
             </article>
           </div>
-          <div class="col-md-4 col-sm-4">
+<!--          <div class="col-md-4 col-sm-4">
             <article class="blog-list">
               <div class="blog-info-box">
                 <div class="share_article">
@@ -278,7 +267,7 @@
                   enjoy your night out. Call Or save 10% online with...</p>
                 <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
             </article>
-          </div>
+          </div>-->
         </div>
   </div>
 </section>
