--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="carousel-inner">
             <!--item-1-->
             <div class="carousel-item active">
-                <img src="assets/images/slider/slider_1.jpg" class="img-fluid" alt="image">
+                <img src="assets/images/banner/1.png" class="img-fluid" alt="image">
                 <div class="carousel-caption">
                     <div class="banner_text text-center div_zindex white-text">
                         <h1>Airport access limo</h1>
@@ -148,7 +148,7 @@
 
             <!--item-2-->
             <div class="carousel-item">
-                <img src="assets/images/slider/slider_2.jpg" alt="image" class="img-fluid">
+                <img src="assets/images/banner/3.png" alt="image" class="img-fluid">
                 <div class="carousel-caption">
                     <div class="banner_text text-center div_zindex white-text">
                         <h1>Car service to JFK, LGA, Airports</h1>
@@ -160,7 +160,7 @@
 
             <!--item-3-->
             <div class="carousel-item">
-                <img src="assets/images/slider/slider_3.jpg" alt="image" class="img-fluid">
+                <img src="assets/images/banner/2.png" alt="image" class="img-fluid">
                 <div class="carousel-caption">
                     <div class="banner_text text-center div_zindex white-text">
                         <h1>Event, Corporate & Airport Transportation</h1>
