--- a/services.html
+++ b/services.html
@@ -180,7 +180,7 @@
                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
               </ul>
             </div>
-            <a href="#"><img src="assets/images/service/9.jpg" class="img-fluid" alt="image"></a>
+            <a href="#"><img src="assets/images/service/3.png" class="img-fluid" alt="image"></a>
           </div>
           <div class="blog-content">
             <h5><a href="#">Corporate Travel</a></h5>
@@ -199,7 +199,7 @@
                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
               </ul>
             </div>
-            <a href="#"><img src="assets/images/service/8.jpg" class="img-fluid" alt="image"></a>
+            <a href="#"><img src="assets/images/service/2.png" class="img-fluid" alt="image"></a>
           </div>
           <div class="blog-content">
             <h5><a href="#">Entertainment and Tour</a></h5>
@@ -219,7 +219,7 @@
                     <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                   </ul>
                 </div>
-                <a href="#"><img src="assets/images/service/7.jpg" class="img-fluid" alt="image"></a>
+                <a href="#"><img src="assets/images/service/4.png" class="img-fluid" alt="image"></a>
               </div>
               <div class="blog-content">
                 <h5><a href="#">Cruise Terminal</a></h5>
